--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html;
+            root   /;
             index  index.html index.htm;
             # proxy_pass   http://master.com;
         }
